// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalWizard component tests ModalWizard Button component tests Should close Modal after opening it and clicking on the close button 1`] = `
<body
  class=""
>
  <div>
    <button
      aria-disabled="false"
      class="pf-c-button pf-m-primary"
      data-ouia-component-id="OUIA-Generated-Button-primary-11"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      data-testid="modal-wizard-button"
      type="button"
    >
      bText
    </button>
  </div>
  <div />
</body>
`;

exports[`ModalWizard component tests ModalWizard Button component tests Should show Modal after clicking on the button 1`] = `
<body
  class="pf-c-backdrop__open"
>
  <div
    aria-hidden="true"
  >
    <button
      aria-disabled="false"
      class="pf-c-button pf-m-primary"
      data-ouia-component-id="OUIA-Generated-Button-primary-6"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      data-testid="modal-wizard-button"
      type="button"
    >
      bText
    </button>
  </div>
  <div>
    <div
      class="pf-c-backdrop"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          aria-describedby="pf-wizard-description-4"
          aria-labelledby="pf-wizard-title-4"
          aria-modal="true"
          class="pf-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-5"
          data-ouia-component-type="PF4/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-4"
          role="dialog"
        >
          
          <div
            class="pf-c-wizard"
          >
            <div
              class="pf-c-wizard__header"
            >
              <button
                aria-disabled="false"
                aria-label="Close"
                class="pf-c-button pf-m-plain pf-c-wizard__close"
                data-ouia-component-id="OUIA-Generated-Button-plain-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
              </button>
              <h2
                aria-label="wTitle"
                class="pf-c-title pf-m-3xl pf-c-wizard__title"
                id="pf-wizard-title-4"
              >
                wTitle
              </h2>
              <p
                class="pf-c-wizard__description"
                id="pf-wizard-description-4"
              >
                wDescription
              </p>
            </div>
            <button
              aria-expanded="false"
              aria-label="Wizard Toggle"
              class="pf-c-wizard__toggle"
            >
              <ol
                class="pf-c-wizard__toggle-list"
              >
                <li
                  class="pf-c-wizard__toggle-list-item"
                >
                  <span
                    class="pf-c-wizard__toggle-num"
                  >
                    1
                  </span>
                   
                  Ciao
                </li>
              </ol>
              <span
                class="pf-c-wizard__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="pf-c-wizard__outer-wrap"
            >
              <div
                class="pf-c-wizard__inner-wrap"
              >
                <nav
                  aria-labelledby="pf-wizard-title-4"
                  class="pf-c-wizard__nav"
                >
                  <ol
                    class="pf-c-wizard__nav-list"
                  >
                    <li
                      class="pf-c-wizard__nav-item"
                    >
                      <button
                        aria-current="page"
                        aria-disabled="true"
                        class="pf-c-wizard__nav-link pf-m-current pf-m-disabled"
                        disabled=""
                      >
                        Ciao
                      </button>
                    </li>
                  </ol>
                </nav>
                <main
                  aria-labelledby="pf-wizard-title-4"
                  class="pf-c-wizard__main"
                >
                  <div
                    class="pf-c-wizard__main-body"
                  >
                    <p>
                      Step 1 content
                    </p>
                  </div>
                </main>
              </div>
              <footer
                class="pf-c-wizard__footer"
              >
                <button
                  aria-disabled="true"
                  class="pf-c-button pf-m-primary pf-m-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-primary-7"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="submit"
                >
                  Next
                </button>
                <div
                  class="pf-c-wizard__footer-cancel"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-link"
                    data-ouia-component-id="OUIA-Generated-Button-link-1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalWizard component tests ModalWizard Button component tests should render ModalWizard Button component 1`] = `
<div>
  <button
    aria-disabled="false"
    class="pf-c-button pf-m-primary"
    data-ouia-component-id="OUIA-Generated-Button-primary-1"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe="true"
    data-testid="modal-wizard-button"
    type="button"
  >
    bText
  </button>
</div>
`;

exports[`ModalWizard component tests ModalWizard Button component tests should render ModalWizard Button component with Icon 1`] = `
<div>
  <button
    aria-disabled="false"
    class="pf-c-button pf-m-primary"
    data-ouia-component-id="OUIA-Generated-Button-primary-2"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe="true"
    data-testid="modal-wizard-button"
    type="button"
  >
    <span
      class="pf-c-button__icon pf-m-start"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M896.00001,896 L128.00001,896 L128.00001,598.3 C127.992068,589.817319 124.610103,581.686212 118.60001,575.7 L27.3000104,484.4 C22.7589663,479.786603 15.8788299,478.377654 9.88987176,480.834662 C3.90091361,483.291671 -5.68434189e-13,489.126635 -5.68434189e-13,495.6 L-5.68434189e-13,1001.3 C-5.68434189e-13,1007.9 2.10001041,1013.3 6.40001041,1017.6 C10.7000104,1021.9 16.1000104,1024 22.7000104,1024 L1001.30001,1024 C1007.90001,1024 1013.30001,1021.9 1017.60001,1017.6 C1021.90001,1013.3 1024.00001,1007.9 1024.00001,1001.3 L1024.00001,22.7 C1024.00001,16.1 1021.90001,10.7 1017.60001,6.4 C1013.30001,2.1 1007.90001,0 1001.30001,0 L496.60001,0 C490.137126,0.0110584325 484.315521,3.90919741 481.843778,9.88075359 C479.372035,15.8523098 480.735582,22.7245228 485.30001,27.3 L576.60001,118.6 C582.586222,124.610093 590.717329,127.992058 599.20001,128 L896.00001,128 L896.00001,896 Z M655.80001,316.9 L550.90001,421.9 L137.80001,8.7 C132.00001,2.9 125.30001,0 117.80001,0 C110.30001,0 103.60001,2.9 97.8000104,8.7 L8.70001041,97.8 C2.90001041,103.6 1.04080211e-05,110.3 1.04080211e-05,117.8 C1.04080211e-05,125.3 2.90001041,132 8.70001041,137.8 L421.90001,550.8 L316.90001,655.8 C290.50001,682.2 299.40001,704 336.80001,704 L636.00001,704 C694.50001,704 704.00001,693.7 704.00001,635.9 L704.00001,336.7 C703.90001,299.4 682.20001,290.5 655.80001,316.9 Z"
        />
      </svg>
    </span>
    bText
  </button>
</div>
`;

exports[`ModalWizard component tests ModalWizard Button component tests should render disabled ModalWizard Button component 1`] = `
<div>
  <button
    aria-disabled="true"
    class="pf-c-button pf-m-primary pf-m-disabled"
    data-ouia-component-id="OUIA-Generated-Button-primary-3"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe="true"
    data-testid="modal-wizard-button"
    disabled=""
    type="button"
  >
    bText
  </button>
</div>
`;

exports[`ModalWizard component tests ModalWizard Button component tests should render disabled ModalWizard with tooltip Button component 1`] = `
<body>
  <div>
    <button
      aria-disabled="true"
      class="pf-c-button pf-m-primary pf-m-aria-disabled"
      data-ouia-component-id="OUIA-Generated-Button-primary-4"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      data-testid="modal-wizard-button"
      type="button"
    >
      bText
    </button>
  </div>
  <div />
</body>
`;
